--- a/UFO-level-1/static/css/style.css
+++ b/UFO-level-1/static/css/style.css
@@ -25,7 +25,6 @@ body {
   bottom: 0;
   left: 0;
   min-height: 100px;
-  background: #4e5d6c;
 }
 
 /* The code styles the text at the bottom of the footer */
@@ -35,7 +34,6 @@ body {
   bottom: 0;
   left: 0;
   padding: 5px;
-  background: #1b3146;
 }
 
 .navbar {
@@ -49,7 +47,6 @@ body {
   bottom: 5px;
   left: 150px;
   width: 35px;
-  color: white;
 }
 
 /* Adding styles to the aside and filter form */
@@ -62,14 +59,13 @@ body {
 }
 
 .filters {
-  margin-top: 10px;
+  margin-top: 0;
 }
 
 select {
   display: block;
   width: 100%;
   padding: 8px;
-  color: #8e979f;
   outline: none;
 }
 
@@ -87,9 +83,10 @@ select {
   margin-top: 50px;
 }
 
-.margin-top-50 {
-  margin-top: 50px;
+.margin-top-20 {
+  margin-top: 20px;
 }
+
 
 /* The styles for the parallax */
 .hero {
@@ -107,36 +104,18 @@ select {
 .hero h1 {
   margin-top: 200px;
   font-size: 0.1rem;
-  animation: title 1.2s forwards linear;
+  animation: title 2s forwards linear;
+  color: azure;
 }
 
 .hero p {
   font-size: 2rem;
   opacity: 0;
-  animation: subtitle 1.2s forwards linear;
-  animation-delay: 1.2s;
+  animation: subtitle 2s forwards linear;
+  animation-delay: 2s;
+  color: azure;
 }
 
-/* input placeholder color changes */
-.form-control::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
-  color: #8e979f;
-}
-
-.form-control::-moz-placeholder {
-  /* Firefox 19+ */
-  color: #8e979f;
-}
-
-.form-control:-ms-input-placeholder {
-  /* IE 10+ */
-  color: #8e979f;
-}
-
-.form-control:-moz-placeholder {
-  /* Firefox 18- */
-  color: #8e979f;
-}
 
 /* media queries which will only be activated at specific screen sizes */
 @media (max-width: 800px) {
