--- a/UFO-level-1/static/css/style.css
+++ b/UFO-level-1/static/css/style.css
@@ -24,7 +24,6 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  min-height: 100px;
 }
 
 /* The code styles the text at the bottom of the footer */
@@ -91,28 +90,28 @@ select {
 /* The styles for the parallax */
 .hero {
   position: relative;
-  height: 550px;
+  height: 400px;
   padding: 20px;
   margin: 0;
   background: black;
-  background-image: url("../images/nasa.jpg");
-  background-attachment: fixed;
-  background-position: bottom center;
-  background-size: cover;
+  background-image: url("../images/UFO.jpg");
+  background-position:center;
+  background-size: 100% 150%;
+
 }
 
 .hero h1 {
-  margin-top: 200px;
-  font-size: 0.1rem;
-  animation: title 2s forwards linear;
+  margin-top: 100px;
+  font-size: 0.01rem;
+  animation: title 1s forwards linear;
   color: azure;
 }
 
 .hero p {
   font-size: 2rem;
   opacity: 0;
-  animation: subtitle 2s forwards linear;
-  animation-delay: 2s;
+  animation: subtitle 1s forwards linear;
+  animation-delay: 1s;
   color: azure;
 }
 
